cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(TULIP 4.0.0 REQUIRED)
FIND_PACKAGE(Qt4  REQUIRED)
INCLUDE(${QT_USE_FILE})

STRING(REGEX REPLACE ".*/" "" PLUGIN_NAME ${CMAKE_CURRENT_SOURCE_DIR})
STRING(TOLOWER ${PLUGIN_NAME} PLUGIN_NAME)
SET(PLUGIN_NAME ${PLUGIN_NAME}-${TULIP_VERSION})

INCLUDE_DIRECTORIES(
${TULIP_INCLUDE_DIR}
${QT_INCLUDE_DIR}
${CMAKE_CURRENT_BINARY_DIR}
${CMAKE_CURRENT_SOURCE_DIR}
)

QT4_WRAP_CPP(MOCS
)

QT4_ADD_RESOURCES(RCCS
)

QT4_WRAP_UI(UIS
)

SET(SRCS
main.cpp
)

ADD_EXECUTABLE(${PLUGIN_NAME} ${SRCS} ${UIS} ${MOCS} ${RCCS})

TARGET_LINK_LIBRARIES(${PLUGIN_NAME} ${TULIP_LIBRARIES} ${QT_LIBRARIES} /lib/libproc-3.2.8.so)

