SET(TULIP_BUILD_DOC ON CACHE BOOL "Do you want to build the documentation ? [ON|OFF]")

#Only
IF(TULIP_BUILD_DOC)
  # Unset the previous values of the CMake cache variable SPHINX_EXECUTABLE
  # in case the value of PYTHON_EXECUTABLE CMake variable changed
  UNSET(SPHINX_EXECUTABLE CACHE)
  FIND_PACKAGE(Sphinx)
  IF(SPHINX_FOUND)
    IF(TULIP_BUILD_PYTHON_COMPONENTS AND NOT TULIP_ACTIVATE_PYTHON_WHEEL_TARGET)
      ADD_SUBDIRECTORY(python)
    ENDIF(TULIP_BUILD_PYTHON_COMPONENTS AND NOT TULIP_ACTIVATE_PYTHON_WHEEL_TARGET)
    IF(NOT TULIP_ACTIVATE_PYTHON_WHEEL_TARGET)
      ADD_SUBDIRECTORY(user)
      ADD_SUBDIRECTORY(developer)
    ENDIF(NOT TULIP_ACTIVATE_PYTHON_WHEEL_TARGET)
  ELSE(SPHINX_FOUND)
    MESSAGE(AUTHOR_WARNING "Sphinx not found: unable to generate the documentation.")
  ENDIF(SPHINX_FOUND)

  IF(NOT TULIP_ACTIVATE_PYTHON_WHEEL_TARGET AND NOT TULIP_BUILD_FOR_APPIMAGE)
    FIND_PACKAGE(Doxygen)
    IF(DOXYGEN_FOUND)
      ADD_SUBDIRECTORY(doxygen)
    ELSE(DOXYGEN_FOUND)
      MESSAGE(AUTHOR_WARNING "doxygen not found: unable to generate the Tulip API documentation.")
    ENDIF(DOXYGEN_FOUND)
  ENDIF(NOT TULIP_ACTIVATE_PYTHON_WHEEL_TARGET AND NOT TULIP_BUILD_FOR_APPIMAGE)
ENDIF(TULIP_BUILD_DOC)
